modification clé nom stripe

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,4 @@ spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 
 # Stripe Configuration
-stripe.secret.key=${secret_key}
+stripe.api.key=${secret_key}
