--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=pestacle-app
 server.port=8080
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/pestacle_db?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://ut83dsi9suz8qfvd:unLvbKcjoTPzrjFrQmqi@boon9lmtpxc1rvg8clc1-mysql.services.clever-cloud.com:3306/boon9lmtpxc1rvg8clc1
+spring.datasource.username=ut83dsi9suz8qfvd
+spring.datasource.password=unLvbKcjoTPzrjFrQmqi
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
