--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,52 @@
 spring.application.name=pestacle-app
 server.port=8080
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/pestacle_db?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+# ===============================
+# Database Configuration (PostgreSQL)
+# ===============================
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# ===============================
 # Server Configuration
+# ===============================
 server.error.include-message=always
 server.error.include-binding-errors=always
 
+# ===============================
 # Swagger Configuration
+# ===============================
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 
+# ===============================
 # CORS Configuration
+# ===============================
 spring.web.cors.allowed-origins=http://localhost:3000
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 
+
+# Mailer Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=adnan.mahboubi03@gmail.com
+spring.mail.password=mvda xspq qjbf huxr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+app.mail.from=Pestacle - Billetterie <pestacleservice.mahboubi03@gmail.com>
+
+# ===============================
 # Stripe Configuration
+# ===============================
 stripe.api.key=${secret_key}
